--- a/Winter.theme.css
+++ b/Winter.theme.css
@@ -1,9 +1,12 @@
 //META{"name":"Winter","description":"Enjoy the 'Cool' Theme","author":"DevilsTheAvenged","version":"1.4"}*//{}
+
 .app,.bda-backdrop,#pubs-container:before {
 	background-image: url("https://wallpapercave.com/wp/aHXgonf.jpg") !important;
 	background-size: cover !important;
 	background-position: center !important;
 }
+
+
 .contentSelectedText-3j5CXt,.contentHoveredText-2HYGIY {
     background-color: transparent;
 }
@@ -395,6 +398,46 @@
     font-size: 16px;
     color: #fff;
 }
+.bodyTitle-yehI7c {
+   color: white;
+}
+.theme-dark .quickMessage-28pD5Y {
+     background: rgba(0,0,65,0.3);
+}
+.note textarea:focus {
+  background-color: rgba(255,255,255,0.3) !important;
+}
+.role-3rahR_ {
+  padding: 4px 6px;
+  border-radius: 3px;
+  overflow: hidden; 
+  }
+  .role-3rahR_ .roleCircle-3-vPZq {
+    opacity: .5;
+    height: 22px;
+    width: 5px;
+    margin-top: -4px;
+    margin-bottom: -4px;
+    margin-left: -5px;
+    margin-right: -1000px;
+    padding-right: 997px;
+    border-radius: 0; 
+    }
+    /* Secondary Roles */
+    .role-3rahR_[style*="border-color: rgba(185, 187, 190, 0.6)"] .roleCircle-3-vPZq {
+       background: blue !important;
+}
+    .role-3rahR_ .roleCircle-3-vPZq:not(.roleCircleButton-sMOdib) + .roleName-DUQZ9m {
+      margin-left: 0; 
+      }
+  .role-3rahR_ .roleName-DUQZ9m {
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 22px; 
+     color: white !important;
+     position: relative;
+     left: 4px;
+ }
 .root-2sNHUF {
     background: url(https://wallpaperscraft.com/image/snow_snowflake_winter_73812_4928x3264.jpg) 50% 50% / cover !important; 
 }
@@ -536,6 +579,9 @@ position: absolute;
     background-color: rgba(0,0,95,1);
     border: 1px solid;
 }
+.chat .divider>div {
+    display: none;
+}
 .buttonBrandFilledDefault-2Rs6u5 {
     background-color: rgba(0,0,145,1);
 }
@@ -545,19 +591,19 @@ position: absolute;
 .app a, .connecting a {
  color: rgba(0,0,245,1);
 }
-.itemDefaultSelected-1UAWLe {
+.side-2nYO0F .itemSelected-3XxAMf {
     color: #fff;
-    background-color: rgba(0,0,135,1);
+    background-color: rgba(0,0,135,1) !important;
     border: 1px dashed;
 }
-.itemDefaultSelected-1UAWLe:hover {
+.side-2nYO0F .itemSelected-3XxAMf:hover {
     color: #fff;
-    background-color: rgba(0,0,215,0.4);
+    background-color: rgba(0,0,215,0.4) !important;
     border: 1px solid;
 }
 .theme-dark .itemDefault-3NDwnY:hover {
     border: 1px solid #f6f6f7;
-    background-color: rgba(0,0,115,0.4);
+    background-color: rgba(0,0,115,0.4) !important;
 }
 .barFill-18ABna {
     background: rgba(0,0,175,1);
@@ -1178,5 +1224,6 @@ color: white;
     -webkit-mask: none;
     mask: none;
 }
+
 
 
