--- a/TheQuestionMark.theme.css
+++ b/TheQuestionMark.theme.css
@@ -1711,6 +1711,12 @@ a {
 .theme-dark #friends .friends-table .friends-table-header .friends-column-separator {
     background-color: transparent;
 }
+.search-bar-tag {
+    border-radius: 2px;
+    color: rgb(255, 255, 255);
+    border: 1px solid orange;
+    background: black;
+}
 .theme-dark #friends .friends-table .friends-table-header .friends-column,
 #friends .friends-table .friends-row .discord-tag,
 #friends .friends-table .friends-row .friends-column-status .friend-activity-text, #friends .friends-table .friends-row .friends-column-status .status-text {
