--- a/TheGreenChristmas.theme.css
+++ b/TheGreenChristmas.theme.css
@@ -490,6 +490,9 @@ a img {
     border: none;
     box-shadow: none;
 }
+.statusRed-1ZlXmf {
+    color: #10b51d;
+}
 .icon-3_ICKH {
     color: #10b51d;
 }
