--- a/TheGreenChristmas.theme.css
+++ b/TheGreenChristmas.theme.css
@@ -12,7 +12,9 @@
 .theme-dark .layer, .theme-dark .layers {
     background: rgba(0,0,0,0.36);
 }
-
+.headerStreaming-3F-wjT {
+    background: rgba(45,27,75,0.8);
+}
 .guilds-wrapper {
     background-color: transparent;
 }
