--- a/Mario.theme.css
+++ b/Mario.theme.css
@@ -4,7 +4,7 @@
 .callout-backdrop,
 .bda-backdrop,
 #pubs-container:before {
-	background-image: url("https://hddesktopwallpapers.in/wp-content/uploads/2015/07/mario-wallpaper-superb.png");
+	background-image: url("http://getwallpapers.com/wallpaper/full/d/3/a/564029.jpg");
   background-size: cover !important;
 	background-position: center !important;
 }
