--- a/ChocolaTheme.theme.css
+++ b/ChocolaTheme.theme.css
@@ -2058,9 +2058,6 @@ form,
 .theme-dark .message-group .comment .edited {
     color: rgba(255, 255, 255, 0.6);
 }
-.theme-dark .channel-members .member.popout-open, .theme-dark .channel-members .member:hover {
-    background: linear-gradient(90deg,black 85%,#53B047);
-}
 /* Popup Menu */
 .separator-1hpa3S {
     border-bottom: none;
@@ -2084,14 +2081,14 @@ form,
 }
 /* Upload Section */
 .uploadModal-2KN6Mm .inner-1-09ZV {
-    border: 2px dashed #53B047;
+    border: 2px dashed #5c4957;
     color: rgb(255, 255, 255);
 }
 .uploadModal-2KN6Mm {
-    background-color: #060505;
+    background-color: #443941;
 }
 .uploadModal-2KN6Mm .footer-4pOKm8 {
-    background-color: #060505;
+    background-color: #443941;
 }
 .uploadModal-2KN6Mm .footer-4pOKm8 .button {
     background-color: rgba(255,0,0,0.4);
