--- a/Bowser.theme.css
+++ b/Bowser.theme.css
@@ -215,11 +215,11 @@
 }
 
 /* LAST BUT NOT LEAST PART, THE USER POPOUT AND USER PROFILE MODAL */
-.headerNormal-1cioxU,.body-3rkFrF,.footer-2J5zqP {
+.theme-dark .headerNormal-3Vn9nT,.theme-dark .body-3ljq11, .theme-dark .footer-2wFs91 {
     background: rgba(7,6,5,0.6) !important;
     border: none;
 }
-.headerPlaying-2eYqm9 {
+.headerPlaying-2Q7mBy {
     background: rgba(0, 0, 255,0.3) !important;
 }
 .botTagInvert-gorWR_ {
@@ -229,7 +229,7 @@
     padding-bottom: 4px;
     border: 3px solid #53B047;
 }
-.userPopout-4pfA0d {
+.userPopout-11hFKo {
     border-radius: 33px;
     color: white;
     border: 3px solid #53B047;
@@ -240,7 +240,7 @@
 .body-3rkFrF {
     border-bottom: none;
 }
-.headerUsernameNoNickname-1iGxNP,.bodyTitle-yehI7c {
+.headerUsernameNoNickname-1iGxNP,.bodyTitle-18hsd9 {
     color: white;
 }
 .headerDiscriminator-3fLlCR {
@@ -289,26 +289,23 @@
  .topSectionStreaming-3rIBIm {
     background: rgba(89, 54, 149,0.7);
 }
-.headerPlaying-2eYqm9 {
+
+.headerSpotify-26yUf5,
+.topSectionSpotify-3744IX {
+    background: rgba(76, 175, 80,0.4);
+}
+.headerPlaying-2Q7mBy {
     background: rgb(114, 137, 218);
 }
-.body-3rkFrF .note-3Zfyi2 textarea {
-    padding-top: 8px;
-    padding-bottom: 7px;
-    font-size: 17px;
-    padding-left: 6px;
-}
-#user-profile-modal .guilds .section .note textarea {
-   padding: 4px 8px;
-}
-.bodyTitle-yehI7c {
+
+.bodyTitle-18hsd9 {
     color: white;
 }
-.note textarea:focus {
+.theme-dark .note-2AtC_s textarea:focus {
     background: rgba(7,6,5, 0.6) !important;
     border: 3px solid #53B047;
 }
-.note textarea {
+.theme-dark .note-2AtC_s textarea  {
     background: rgba(0, 0, 0, 0.3) !important;
     color: white;
 }
@@ -337,7 +334,7 @@
 .header-3mZJcV .avatarStatusStreaming-3lGjGk {
     background: #600080;
 }
-.headerStreaming-3F-wjT {
+.headerStreaming-lmgoma {
     background: rgba(89, 54, 149,0.5);
 }
 .headerTagStreaming-2FikoO {
@@ -678,7 +675,7 @@
 .theme-dark .user-settings-notifications .notifications-sound {
     box-shadow: none;
 }
-.theme-dark .user-settings-voice .preview-overlay {
+.theme-dark .userSettingsVoice-TvPQ80 .previewOverlay-2vHj3H{
     background-color: rgba(196,63,40,0.3) !important;
     border: 3px solid #070605;
 }
@@ -702,17 +699,17 @@
 .user-settings-voice .media-engine-video {
     background-color: transparent;
 }
-.buttonBrandFilled-3Mv0Ra {
+.lookFilled-luDKDo.colorBrand-3PmwCE {
     background-color: #070605;
     color: white;
     border: 3px solid #C43F28;
 }
-.buttonBrandFilled-3Mv0Ra:hover {
+.lookFilled-luDKDo.colorBrand-3PmwCE:hover {
     background-color: #070605;
     color: white;
     border: 3px outset #53B047;
 }
-.buttonBrandFilled-3Mv0Ra:active {
+.lookFilled-luDKDo.colorBrand-3PmwCE:active {
     background-color: #070605;
     color: white;
     border: 3px inset #53B047;
@@ -742,19 +739,19 @@
     border-width: 5px;
     border-style: inset;
 }
-.buttonGreenFilled-6QHNrw {
+.lookFilled-luDKDo.colorGreen-22At8E {
     background-color: #070605;
     border-color: #C43F28;
     border-width: 3px;
     border-style: solid;
 }
-.buttonGreenFilled-6QHNrw:hover {
+.lookFilled-luDKDo.colorGreen-22At8E:hover {
     background-color: #070605;
     border-color: #53B047;
     border-width: 3px;
     border-style: outset;
 }
-.buttonGreenFilled-6QHNrw:active {
+.lookFilled-luDKDo.colorGreen-22At8E:active {
     background-color: #070605;
     border-color: #53B047;
     border-width: 3px;
@@ -1689,7 +1686,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     font-size: 15px;
     text-shadow: 1px 1px 3px #000,1px 1px 3px #000;
 }
-.theme-dark .message-group h2 span {
+.theme-dark .message-group h2 .timestamp{
     color: rgba(255, 255, 255, 1) !important;
     font-size: 13px;
 }
